--- a/Seq_Migration/package.json
+++ b/Seq_Migration/package.json
@@ -13,6 +13,7 @@
     "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1"
   },
